--- a/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
+++ b/GuessTheWord-Starter/app/src/main/res/layout/game_fragment.xml
@@ -58,13 +58,30 @@
             android:textSize="34sp"
             android:textStyle="normal"
             android:text="@{@string/quote_format(gameViewModel.word)}"
-            app:layout_constraintBottom_toTopOf="@+id/score_text"
+            app:layout_constraintBottom_toTopOf="@+id/hint_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/word_is_text"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="&quot;Tuna&quot;" />
+
+        <TextView
+            android:id="@+id/hint_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/grey_text_color"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            android:text="@{gameViewModel.wordHint}"
+            app:layout_constraintBottom_toTopOf="@+id/timer_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Current word has 5 letters\nThe letter at position 2 is N" />
 
         <TextView
             android:id="@+id/timer_text"
