--- a/MarsRealEstate-Starter/app/src/main/res/layout/grid_view_item.xml
+++ b/MarsRealEstate-Starter/app/src/main/res/layout/grid_view_item.xml
@@ -23,15 +23,15 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.example.android.marsrealestate.overview.OverviewViewModel" />
+            name="property"
+            type="com.example.android.marsrealestate.network.MarsProperty" />
     </data>
 
     <ImageView
         android:id="@+id/mars_image"
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        app:imageUrl="@{viewModel.property.imgSrcUrl}"
+        app:imageUrl="@{property.imgSrcUrl}"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:padding="2dp"
