--- a/MarsRealEstate-Starter/app/src/main/res/layout/grid_view_item.xml
+++ b/MarsRealEstate-Starter/app/src/main/res/layout/grid_view_item.xml
@@ -21,19 +21,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp">
+
+        <ImageView
+            android:id="@+id/mars_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:padding="2dp"
+            android:scaleType="centerCrop"
+            app:imageUrl="@{property.imgSrcUrl}"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
+        <ImageView
+            android:id="@+id/mars_property_type"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom|end"
+            android:adjustViewBounds="true"
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:visibility="@{property.rental ? View.GONE : View.VISIBLE}"
+            android:src="@drawable/ic_for_sale_outline"
+            tools:src="@drawable/ic_for_sale_outline"/>
+    </FrameLayout>
+
     <data>
+
+        <import type="android.view.View" />
+
         <variable
             name="property"
             type="com.example.android.marsrealestate.network.MarsProperty" />
     </data>
-
-    <ImageView
-        android:id="@+id/mars_image"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        app:imageUrl="@{property.imgSrcUrl}"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        android:padding="2dp"
-        tools:src="@tools:sample/backgrounds/scenic"/>
 </layout>
