--- a/GDGFinder-Starter/app/src/main/res/layout/home_fragment.xml
+++ b/GDGFinder-Starter/app/src/main/res/layout/home_fragment.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:onClick="@{() -> viewModel.onFabClicked()}"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/spacing_normal"
             app:srcCompat="@drawable/ic_gdg" />
 
         <androidx.core.widget.NestedScrollView
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="true"
-                android:paddingBottom="16dp"
+                android:paddingBottom="@dimen/spacing_normal"
                 tools:context=".home.HomeFragment">
 
                 <ImageView
@@ -63,7 +63,7 @@
                     android:id="@+id/title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_normal"
                     android:text="@string/about_google_developer_groups"
                     android:textAppearance="?attr/textAppearanceHeadline5"
                     app:layout_constraintEnd_toStartOf="@+id/end_guideline"
@@ -105,7 +105,7 @@
                     android:id="@+id/end_image"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_normal"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="3:1.5"
@@ -119,14 +119,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_begin="16dp" />
+                    app:layout_constraintGuide_begin="@dimen/spacing_normal" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/end_guideline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_end="26dp" />
+                    app:layout_constraintGuide_end="@dimen/spacing_normal" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
