--- a/GDGFinder-Starter/app/src/main/res/layout/activity_main.xml
+++ b/GDGFinder-Starter/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                         android:layout_width="150dp"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/logo"
-                        app:tint="?attr/colorOnPrimary"
+                        app:tint="?attr/colorOnSecondary"
                         android:contentDescription="@string/app_name"/>
             </androidx.appcompat.widget.Toolbar>
 
